--- a/angular.json
+++ b/angular.json
@@ -63,8 +63,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "golf-scorecard-angular:build",
-            "proxyConfig": "proxy.conf.json"
+            "browserTarget": "golf-scorecard-angular:build"
           },
           "configurations": {
             "production": {
